# clara

./: .gitignore  AUTHORS.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml
clara/: chat.py  cli.py  config.py  consts.py  index.py  utils.py
tests/: test_index.py
